@@ -41,3 +41,4 @@ New internal features:
   'getCPSCandidateLocalRoles' method in MemberShip tool untill we have flexible
   solution for such use cases.
 - Cleaner API for local roles blocking/unblocking.
+- Added an access keys vocabulary. This is a part of the fix for #983.
